Resolved #3260: Fixed "Data Field" caption overlap issue in browse "Find" menu option

--- a/src/RentalWorksWeb/Libraries/Fw/theme/material/FwMenu.css
+++ b/src/RentalWorksWeb/Libraries/Fw/theme/material/FwMenu.css
@@ -27,11 +27,11 @@ html.theme-material .fwmenu.default .buttonbar {flex:1 1 auto;line-height:2.5em;
 html.theme-material .fwmenu.default .buttonbar .vr {height:30px;width:1px;margin:0 5px;background-color:rgba(0,0,0,0.4);}
 html.theme-material .fwmenu.default .buttonbar > .btn {cursor:pointer;padding:0 10px 0 10px;display:flex;align-items: center;height: 100%;box-sizing: border-box;border-top: .25em solid transparent;transition: .3s;outline:0;}
 html.theme-material .fwmenu.default .buttonbar .btn .findbutton-dropdown { display:none;position: absolute; top: 40px; -moz-box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); -webkit-box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12); box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12); background: #fafafa; border: 1px solid #d6d6d6; color: #263248;}
-html.theme-material .fwmenu.default .buttonbar .btn .findbutton-dropdown .queryrow { display: flex; flex-wrap: nowrap; }
+html.theme-material .fwmenu.default .buttonbar .btn .findbutton-dropdown .queryrow { display: flex; flex-wrap: nowrap; line-height:1em;}
 html.theme-material .fwmenu.default .buttonbar .btn.active .findbutton-dropdown {display:block;cursor:default;}
 html.theme-material .fwmenu.default .buttonbar .btn.active .findbutton-dropdown .andor { visibility:hidden; }
 html.theme-material .fwmenu.default .buttonbar .btn.active .findbutton-dropdown .delete-query { visibility:hidden; cursor:pointer; margin: .9em 0 0 0;}
-html.theme-material .fwmenu.default .buttonbar .btn.active .findbutton-dropdown .add-query {cursor:pointer; margin: .9em 0 0 0;}
+html.theme-material .fwmenu.default .buttonbar .btn.active .findbutton-dropdown .add-query {cursor:pointer; margin: .9em 0 0 0;padding-right:3px;}
 html.theme-material .fwmenu.default .buttonbar .btn:hover:not(.disabled) {border-top:.25em solid #2e7d32;}
 html.theme-material .fwmenu.default .buttonbar .btn.disabled {opacity:0.6;}
 html.theme-material .fwmenu.default .buttonbar .btn > i {font-size:1.5em;}
